moved to app engine. combined static files into a dir. added posts page.

--- a/my_blog.html
+++ b/my_blog.html
@@ -3,7 +3,7 @@
 <head>
   <title>My Blog</title>
     <!-- recognizes CSS -->
-  <link rel="stylesheet" href="my_blog.css">
+  <link rel="stylesheet" href="/static/my_blog.css">
 </head>
 
 <body>
@@ -30,9 +30,10 @@
   </div>
 
   <h5>Keep following my blog if you want to see cat memes, good food, and beautiful scenery!</h5>
-  <a href = "about_me.html">About Me</a>
+  <a href = "/aboutme">About Me</a>
+  <a href = "/posts">Updates</a>
 
-  <script src = "my_blog.js"></script>
+  <script src = "/static/my_blog.js"></script>
 </body>
 
 </html>
