--- a/about_me.html
+++ b/about_me.html
@@ -2,13 +2,15 @@
 
 <head>
   <title>About Me</title>
+  <link rel="stylesheet" href="/static/about_me.css">
 </head>
 
 <body>
   <h1>About Moi</h1>
+  <p>This page is about me, the creator of this site!</p>
 
-  <script src = "about_me.js"></script>
-  
+  <script src = "/static/about_me.js"></script>
+
 </body>
 
 </html>
