--- a/posts.html
+++ b/posts.html
@@ -8,6 +8,23 @@
 <body>
   <h2>Updates</h2>
   <p>You can find my thoughts on this page...</p>
+  <form method = "post">
+    <div>
+      <input type="text" name="title" placeholder="Title"/>
+    </div>
+    <div>
+      <input type="text" name="content" placeholder="What do you want to say?"/>
+    </div>
+    <div>
+      <input type="text" name="user" placeholder="Username"/>
+    </div>
+    <div>
+      <input type="text" name="tags" placeholder="Tags"/>
+    </div>
+    <div>
+      <button type="submit">Send to the Internet!</button>
+    </div>
+  </form>
 
   <!-- <script src = "/static/about_me.js"></script> -->
 
